Adding notifications, BUT no display/adding yet
